# opengl-gui

./: Cargo.toml  vgg16-v2.yaml  vgg16.yaml
src/: canvas.frag  canvas.vert  flames.frag  main.rs  shader_routines.rs  shadertoy.vert  ui-design.glade
